--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+# front matter tells Jekyll to process Liquid
+---
 <!doctype html>
 <html>
   <head>
@@ -5,6 +8,8 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    ...
+  <h1>{{ "Hello World!" | downcase }}</h1>
+  ...
   </body>
 </html>
