--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 layout: architect
 title: Home
 ---
-
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>Home</title>
   </head>
   <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
+    ...
+  <h1>{{ "Hello World!" | downcase }}</h1>
+  ...
   </body>
 </html>
