added full layout name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 # front matter tells Jekyll to process Liquid
-layout: architect
+layout: jekyll-theme-architect
 title: Home
 ---
 <!doctype html>
