--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 ---
 # front matter tells Jekyll to process Liquid
-layout: jekyll-theme-architect
+layout: architect
 title: Home
 ---
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>{{ page.title }}</title>
   </head>
   <body>
-    ...
-  <h1>{{ "Hello World!" | downcase }}</h1>
-  ...
+    <h1>{{ "Hello World!" | downcase }}</h1>
   </body>
 </html>
