--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 # front matter tells Jekyll to process Liquid
+theme: Architect
 title: Home
 ---
     <h1>{{ "Hello World!" | downcase }}</h1>
