Added nav and HR to pages

--- a/blog.html
+++ b/blog.html
@@ -12,3 +12,11 @@ I will try to keepo the site up to date with the goings on and thougts about thi
     </li>
   {% endfor %}
 </ul>
+<hr>
+<nav>
+  {% for item in site.data.navigation %}
+    <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
+      {{ item.name }}
+    </a>
+  {% endfor %}
+</nav>
