--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
 <h1>Latest Posts</h1>
-I will try to keepo the site up to date with the goings on and thougts about this project. I am totally aware that nobody cairs but I want to keep track of things for me. lol
+I will try to keep the site up to date with the goings on and thougts about this project. I am totally aware that nobody cares but I want to keep track of things for me. lol
 <ul>
   {% for post in site.posts %}
     <li>
